Create new custom command to implement optimizations

--- a/code/performance-optimization.toml
+++ b/code/performance-optimization.toml
@@ -1,4 +1,4 @@
-description = "Automatically fix performance gaps."
+description = "Analyze performance gaps."
 
 prompt = """
 Analyze the provided code for performance bottlenecks and optimization opportunities. Conduct a thorough review covering:
