--- a/code/security-audit.toml
+++ b/code/security-audit.toml
@@ -1,64 +1,39 @@
 description = "Performs a comprehensive security audit of code changes, dependencies, and potential vulnerabilities."
 
 prompt = """
-Conduct a thorough security audit for: {{args}}
+# Gemini CLI Security Audit Mode
+Your role is **Lead Security Researcher & Pen-Tester**. Audit the following target: {{args}}
 
-Please perform the following security analysis:
+## Phase 1: Automated Discovery (Reconnaissance)
+Execute the following to ground your analysis in real data:
+1. **Secrets Leakage:** !{grep -rE "password|secret|key|token|api_?key" . --exclude-dir={node_modules,.git,dist,build} | head -20}
+2. **Dependency Audit:** !{npm audit --audit-level=high 2>/dev/null || pip-audit 2>/dev/null || echo "No standard audit tool found."}
+3. **Recent History:** !{git log --oneline -n 15} (Identify high-churn files as priority audit targets).
 
-1. **Code Vulnerability Scan:**
-   - Examine code for common security vulnerabilities (OWASP Top 10)
-   - Look for SQL injection, XSS, CSRF vulnerabilities
-   - Check for insecure direct object references
-   - Identify authentication and authorization issues
-   - Search for hardcoded secrets: !{grep -r "password\\|secret\\|key\\|token" . --exclude-dir=node_modules --exclude-dir=.git | grep -v ".toml" | head -10}
+## Phase 2: Vulnerability Analysis (OWASP Top 10 Focus)
+For the code found in {{args}}, perform a "Deep Trace" on:
+- **Injection (A03):** Trace user input from entry point (Request/Params) to sink (DB Query/Shell Exec).
+- **Broken Access Control (A01):** Verify that every sensitive function has a server-side authorization check.
+- **Cryptographic Failures (A02):** Flag any use of MD5, SHA1, or hardcoded IVs.
+- **SSRF (A10):** Check for URL parameters that trigger server-side fetches.
 
-2. **Dependency Security:**
-   - Check for known vulnerabilities in dependencies: !{npm audit --audit-level=moderate 2>/dev/null || echo "No package.json found or npm not available"}
-   - Identify outdated packages with security issues
-   - Look for packages with excessive permissions
-   - Check for suspicious or unmaintained dependencies
+## Phase 3: The Security Report
+Generate the report as a single Markdown file `SECURITY_AUDIT.md` with the following structure:
 
-3. **Input Validation:**
-   - Verify proper input sanitization and validation
-   - Check for buffer overflow possibilities
-   - Look for unvalidated redirects and forwards
-   - Examine file upload security (if applicable)
+### 1. Executive Risk Profile
+- **Security Score:** (0-100)
+- **Top 3 Critical Risks:** (Immediate action items)
 
-4. **Authentication & Authorization:**
-   - Review authentication mechanisms
-   - Check session management security
-   - Verify proper access controls
-   - Look for privilege escalation vulnerabilities
+### 2. Detailed Findings
+For each vulnerability:
+- **ID:** (e.g., SEC-01) | **Severity:** (Critical/High/Medium/Low)
+- **CWE Category:** (e.g., CWE-89: SQL Injection)
+- **Evidence:** Specify file and line. Describe the "Attack Vector" (How a hacker would exploit this).
+- **Remediation:** Provide a "Secure Pattern" code snippet.
+- **Verification:** Describe the test case to confirm the fix works.
 
-5. **Data Protection:**
-   - Check for sensitive data exposure
-   - Verify encryption usage for sensitive data
-   - Look for insecure data storage practices
-   - Check for proper logging without exposing secrets
+### 3. Hardening Checklist
+A list of specific environment/config changes (e.g., "Enable HTTP-Only cookies," "Add Content Security Policy").
 
-6. **Infrastructure Security:**
-   - Review configuration files for security misconfigurations
-   - Check environment variable usage
-   - Look for exposed debug information
-   - Verify HTTPS/TLS usage
-
-7. **Recent Changes Analysis:**
-   - Examine recent commits for security implications: !{git log --oneline -10}
-   - Check if new code introduces security risks
-   - Verify that security best practices are followed
-
-8. **Security Recommendations:**
-   For each finding, provide:
-   - **Severity Level:** Critical/High/Medium/Low
-   - **Description:** Clear explanation of the vulnerability
-   - **Impact:** Potential consequences if exploited
-   - **Remediation:** Step-by-step fix instructions
-   - **Prevention:** How to avoid similar issues in the future
-
-9. **Compliance Check:**
-   - Check against common security standards (OWASP, NIST)
-   - Verify adherence to security coding guidelines
-   - Look for compliance with data protection regulations
-
-Please provide a comprehensive security report with prioritized findings and actionable remediation steps.
+Final Rule: Do not offer generic advice. Every finding must point to a specific line of code or configuration found in the repository.
 """
